...
    <string name="cancel">Cancel</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="daily_reminder_time">Reminder time: %1$s</string>
    <string name="change_time">Change time</string>
    <string name="app_title" translatable="false">ThinkTap</string>
    <string name="difficulty_mixed">Mixed</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="category_value">Category: %1$s</string>
    <string name="difficulty_value">Difficulty: %1$s</string>
    <string name="quiz_progress_description">Question %1$d of %2$d</string>
    <string name="score_counter_description">%1$d correct out of %2$d</string>
...
